// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormFieldComponent With checkbox should be in error 1`] = `
<rc-form-field
  class="rc-error"
>
  <rc-label>
    Field label
  </rc-label>
  <rc-checkbox>
    <rc-material-icon
      class="material-icons"
    >
      check_box_outline_blank
    </rc-material-icon>
    
    
    <label>
      <input
        type="checkbox"
        value="1"
      />
    </label>
  </rc-checkbox>
</rc-form-field>
`;

exports[`FormFieldComponent With checkbox should be outlined 1`] = `
<rc-form-field
  class="rc-outlined"
>
  <rc-label>
    Field label
  </rc-label>
  <rc-checkbox>
    <rc-material-icon
      class="material-icons"
    >
      check_box_outline_blank
    </rc-material-icon>
    
    
    <label>
      <input
        type="checkbox"
        value="1"
      />
    </label>
  </rc-checkbox>
</rc-form-field>
`;

exports[`FormFieldComponent With checkbox should be required 1`] = `
<rc-form-field
  class="rc-required"
>
  <rc-label>
    Field label
  </rc-label>
  <rc-checkbox>
    <rc-material-icon
      class="material-icons"
    >
      check_box_outline_blank
    </rc-material-icon>
    
    
    <label>
      <input
        type="checkbox"
        value="1"
      />
    </label>
  </rc-checkbox>
</rc-form-field>
`;

exports[`FormFieldComponent With checkbox should create With disabled input 1`] = `
<rc-form-field
  class="rc-disabled"
>
  <rc-label>
    Field label
  </rc-label>
  <rc-checkbox
    class="rc-disabled"
  >
    <rc-material-icon
      class="material-icons"
    >
      check_box_outline_blank
    </rc-material-icon>
    
    
    <label>
      <input
        disabled=""
        type="checkbox"
        value="1"
      />
    </label>
  </rc-checkbox>
</rc-form-field>
`;

exports[`FormFieldComponent With checkbox should known when input is focused 1`] = `
<rc-form-field>
  <rc-label>
    Field label
  </rc-label>
  <rc-checkbox>
    <rc-material-icon
      class="material-icons"
    >
      check_box_outline_blank
    </rc-material-icon>
    
    
    <label>
      <input
        type="checkbox"
        value="1"
      />
    </label>
  </rc-checkbox>
</rc-form-field>
`;

exports[`FormFieldComponent With checkbox should set the focus on input when click 1`] = `
<rc-form-field>
  <rc-label>
    Field label
  </rc-label>
  <rc-checkbox>
    
    <rc-material-icon
      class="material-icons"
    >
      check_box
    </rc-material-icon>
    
    <label>
      <input
        type="checkbox"
        value="1"
      />
    </label>
  </rc-checkbox>
</rc-form-field>
`;

exports[`FormFieldComponent With input should be in error 1`] = `
<rc-form-field
  class="rc-error"
>
  <rc-label>
    Field label
  </rc-label>
  <input
    class="rc-input"
    rcinput=""
  />
</rc-form-field>
`;

exports[`FormFieldComponent With input should be outlined 1`] = `
<rc-form-field
  class="rc-outlined"
>
  <rc-label>
    Field label
  </rc-label>
  <input
    class="rc-input"
    rcinput=""
  />
</rc-form-field>
`;

exports[`FormFieldComponent With input should be required 1`] = `
<rc-form-field
  class="rc-required"
>
  <rc-label>
    Field label
  </rc-label>
  <input
    class="rc-input"
    rcinput=""
    required=""
  />
</rc-form-field>
`;

exports[`FormFieldComponent With input should create With disabled input 1`] = `
<rc-form-field
  class="rc-disabled"
>
  <rc-label>
    Field label
  </rc-label>
  <input
    class="rc-input"
    disabled=""
    rcinput=""
  />
</rc-form-field>
`;

exports[`FormFieldComponent With input should create With input 1`] = `
<rc-form-field>
  <rc-label>
    Field label
  </rc-label>
  <input
    class="rc-input"
    rcinput=""
  />
</rc-form-field>
`;

exports[`FormFieldComponent With input should known when input is focused 1`] = `
<rc-form-field
  class="rc-focused"
>
  <rc-label>
    Field label
  </rc-label>
  <input
    class="rc-input"
    rcinput=""
  />
</rc-form-field>
`;

exports[`FormFieldComponent With input should set the focus on input when click 1`] = `
<rc-form-field
  class="rc-focused"
>
  <rc-label>
    Field label
  </rc-label>
  <input
    class="rc-input"
    rcinput=""
  />
</rc-form-field>
`;
